--- a/themes/joshsj/source/styles/variables.css
+++ b/themes/joshsj/source/styles/variables.css
@@ -13,10 +13,10 @@ body {
   --border: 0.1rem solid var(--dark-grey);
 
   --fs-small: calc(var(--fs-normal) * 0.85);
-  --fs-normal: 1.3rem;
-  --fs-h3: 1.5rem;
+  --fs-normal: 1.2rem;
+  --fs-h3: 1.4rem;
   --fs-h2: calc(var(--fs-h3) * 1.3);
-  --fs-h1: calc(var(--fs-h3) * 1.7);
+  --fs-h1: calc(var(--fs-h3) * 1.6);
 
   --ff-normal: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
